force-app/main/default/objects/Conference_Journal_Standardised_Name__c/Conference_Journal_Standardised_Name__c.object-meta.xml
<CustomObject>
    <description>T2-715
When Symplectic(MyPubs) harvests journals and conferences they use instance names rather than the standardised name.  We need to maintain the standardised name object and be able to link all instances of conferences and journals to this list.</description>
    <label>Conference/Journal Standardised Name</label>
    <nameField>
        <displayFormat>CJS-{0}</displayFormat>
        <label>Conference/Journal Standardised Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conference/Journal Standardised Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>