force-app/main/default/objects/Conference_Journal_Standardised_Name__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>