force-app/main/default/objects/Conference_Journal_Standardised_Name__c/fields/I_RS_ERA_id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ERA id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>