force-app/main/default/objects/Conference_Journal_Standardised_Name__c/fields/I_RS_Standardised_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Standardised_Name__c</fullName>
    <label>Standardised Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>